# lengua-sim

./: .gitignore  README.md
src/: chat-ai.py  main.py  pyproject.toml  simulator.py  t.py
src/aichat/: __init__.py  abstract.py  openaichat.py
src/iointerface/: __init__.py  abstract.py  stdio.py  telegram.py
src/simulator/: __init__.py  enums.py
src/speechgenerator/: __init__.py  google.py
