[tool.poetry]
name = "lengua-sim"
version = "0.1.0"
description = ""
authors = ["Mike Zimin <mikeziminio@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "~3.11"
openai = "^1.7.0"
python-dotenv = "^1.0.0"
aiogram = "^3.3.0"
google-cloud-speech = "^2.23.0"
gtts = "^2.5.0"
google-cloud-texttospeech = "^2.15.1"
mypy = "^1.8.0"

[tool.poetry.group.dev.dependencies]
chardet = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
